# CameraTest

./: .gitignore  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sjgsu/ai/cameratest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: detect.i  detect_wrap.cxx  native-lib.cpp  npddetect.cpp  npddetect.h  npdmodel.cpp  npdmodel.h
app/src/main/java/com/sjgsu/ai/cameratest/: Camera2Fragment.java  Camera2Surface.java  CameraActivity.java  CameraFragment.java  CameraSurface.java  DetectThread.java  FaceView.java  MainActivity.java  ModelLab.java  PreviewHandler.java  RawResource.java  SingleFragmentActivity.java  TextFragment.java
app/src/main/java/com/zjgsu/ai/cameratest/: Camera2Fragment.java  Camera2Surface.java  CameraActivity.java  CameraFragment.java  CameraPreview.java  CameraSurface.java  DetectThread.java  FaceView.java  ImageInfo.java  OrientationListener.java  PreviewHandler.java  ViewController.java
app/src/main/java/com/zjgsu/face/: detectJNI.java  npddetect.java
app/src/main/java/comm/zjgsu/face/: SWIGTYPE_p_cv__Mat.java  SWIGTYPE_p_std__vectorT_float_t.java  SWIGTYPE_p_unsigned_char.java  detect.java  detectJNI.java  npddetect.java  vectori.java
app/src/main/res/layout/: camera2_layout.xml  camera_layout.xml
app/src/main/res/raw/: newmodel
app/src/test/java/com/sjgsu/ai/cameratest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
